fixing indexing and debbuging line shift

--- a/land_noise_generation/Cargo.toml
+++ b/land_noise_generation/Cargo.toml
@@ -21,3 +21,5 @@ opt-level = 3
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
+
+RUST_BACKTRACE=1
