--- a/ray_casting/Cargo.toml
+++ b/ray_casting/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.12.1"
+
+
+# Enable only a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
