--- a/gravity_2d/Cargo.toml
+++ b/gravity_2d/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.12.1"
+bevy = "0.13.1"
+
+
+# Enable only a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
