--- a/space_ship/Cargo.toml
+++ b/space_ship/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "land_noise_generation"
+name = "space_ship"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-array2d = "0.3.1"
 bevy = "0.13.1"
-rand = "0.8.5"
+bevy_xpbd_2d = "0.3"
 
-# # Enable a small amount of optimization in debug mode
-# [profile.dev]
-# opt-level = 1
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
@@ -21,5 +17,3 @@ opt-level = 3
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
-
-RUST_BACKTRACE=1
